Fixed whitespace issue on the bottom of the website

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .app{
     text-align: center;
-    height: 100vh;
+    min-height: 100vh;
 }
+
+
