--- a/src/css/CurrentData.css
+++ b/src/css/CurrentData.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2vw;
+    gap: 1vw;
     width: 50vw;
     align-items: center;
 }
@@ -56,7 +56,7 @@
 
 .feels-like {
     color: #fff;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     text-shadow: 0 0 3px #fff, 0 0 5px #000000;
     font-weight: 500;
 }
@@ -75,7 +75,7 @@
 .current-description {
     text-transform: lowercase;
     color: #fff;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     text-shadow: 0 0 3px #fff, 0 0 5px #000000;
     font-weight: 500;
 }
@@ -83,24 +83,23 @@
 .sun-holder {
     display: flex;
     align-items: center;
-    gap: 4vw;
+    gap: 5vw;
     text-align: center;
 }
 
 .sun {
     display: flex;
     flex-direction: column;
-    gap: 0.3vw;
 }
 
 .sun-holder span {
     color: #fff;
-    font-size: 1.2vw;
+    font-size: 1vw;
     font-weight: 500;
     letter-spacing: 0.1vw;
     text-shadow: 0 0 3px #fff, 0 0 5px #000000;
 }
 
 .sun-icon {
-    width: 6vw;
+    width: 5vw;
 }
